<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ATDD</string>
    <string name="hello">Hello ATDD!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="user_name">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="account_name">Hello Tim</string>
    <string name="total">You have 3 orders</string>
    <string name="order">0001</string>
    <string name="order_price">125,000VND</string>
    <string name="total_title">Total:</string>
    <string name="logout">Logout</string>
    <string name="dialog_add_order_tvTitle">Add Order</string>
    <string name="no">No</string>
    <string name="amount">Amount</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="orderCode">0001</string>
    <string name="currency">VND</string>


</resources>