<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:padding="@dimen/normal_margin"
              android:background="@android:color/darker_gray">

    <TextView
            style="@style/dialog_add_order_text"
            android:text="@string/dialog_add_order_tvTitle"
            android:layout_gravity="center"
            />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/normal_margin">

        <TextView
                style="@style/dialog_add_order_text"
                android:text="@string/no"/>

        <EditText
                android:id="@+id/dialog_add_order_etNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:hint="@string/no"/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin">

        <TextView
                style="@style/dialog_add_order_text"
                android:text="@string/amount"/>

        <EditText
                android:id="@+id/dialog_add_order_etAmount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:background="@android:color/white"
                android:hint="@string/amount"/>
    </LinearLayout>

    <TextView
            style="@style/dialog_add_order_text"
            android:layout_marginTop="@dimen/normal_margin"
            android:text="@string/description"/>

    <EditText
            android:id="@+id/dialog_add_order_etDescription"
            android:layout_width="match_parent"
            android:layout_height="@dimen/width_edit_text"
            android:background="@android:color/white"
            android:gravity="top|left"
            android:inputType="text"/>

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/normal_margin"
            >

        <Button
                android:id="@+id/dialog_add_order_btSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button"
                android:text="@string/save"
                android:layout_marginRight="@dimen/normal_margin"/>

        <Button
                android:id="@+id/dialog_add_order_btCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button"
                android:text="@string/cancel"/>
    </LinearLayout>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dialog_add_order_tvMessage"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/red"
            android:gravity="center"/>
</LinearLayout>