<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/big_margin"
            android:layout_gravity="right">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_title"
                android:textSize="@dimen/size_text_header_info"
                android:textColor="@android:color/black"/>

        <TextView
                android:id="@+id/list_order_tvTotalPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/big_margin"
                android:text="@string/order_price"
                android:textSize="@dimen/size_text_header_info"
                android:textColor="@android:color/black"/>
    </LinearLayout>

    <Button
            android:id="@+id/list_order_ivLogOut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_margin"
            android:text="@string/logout"
            android:background="@drawable/button"/>
</LinearLayout>