<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/white">
    <LinearLayout
            android:id="@+id/list_goods_llBlockInfo"
            style="@style/list_goods_block_info">
        <TextView
                android:id="@+id/list_goods_tvAccountName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account_name"
                android:textSize="@dimen/size_text_header_info"
                android:textColor="@android:color/black"/>
        <TextView
                android:id="@+id/list_goods_tvTotalOrder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/normal_margin"
                android:text="@string/total"
                android:textSize="@dimen/size_text_header_info"
                android:textColor="@android:color/black"/>
    </LinearLayout>
    <Button
            android:id="@+id/list_goods_btAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_alignBottom="@+id/list_goods_llBlockInfo"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/big_margin"
            android:background="@drawable/add"/>
    <ListView
            android:id="@+id/list_goods_lvListOrder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/list_goods_llBlockInfo"
            android:layout_margin="@dimen/normal_margin"/>
    <LinearLayout
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:layout_below="@id/list_goods_lvListOrder"
            android:layout_marginRight="@dimen/big_margin"
            android:layout_alignParentRight="true">
        <TextView
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:text="@string/total_title"
                android:textSize="@dimen/size_text_header_info"
                android:textColor="@android:color/black"/>
        <TextView
                android:id="@+id/list_order_tvTotalPrice"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/big_margin"
                android:text="@string/order_price"
                android:textSize="@dimen/size_text_header_info"
                android:textColor="@android:color/black"/>
    </LinearLayout>
    <Button
            android:id="@+id/list_order_ivLogOut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_margin"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:text="@string/logout"
            android:background="@drawable/button"/>
</RelativeLayout>