<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/list_order_selection"
                android:orientation="vertical"
                android:layout_margin="10dp">
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/list_item_IvArrow"
            android:background="@drawable/bt_next_blue"
            android:contentDescription="@string/app_name"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/list_order_selection"
            android:orientation="vertical"
            android:id="@+id/list_item_lvOrder"
            android:layout_toLeftOf="@id/list_item_IvArrow"
            android:layout_marginRight="5dp">

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="14dp"
                    android:id="@+id/list_item_tvOrderNumber"
                    android:text="@string/orderCode">
            </TextView>

            <TextView
                    android:id="@+id/list_item_tvAmount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="14dp"
                    android:layout_alignParentRight="true"
                    android:text="@string/order_price">
            </TextView>
        </RelativeLayout>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="14dp"
                android:id="@+id/list_item_description"
                android:text="@string/description"
                android:singleLine="true"
                android:ellipsize="end"
                android:visibility="gone"/>
    </LinearLayout>

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/list_item_lvOrder"
            android:background="@drawable/line_horiz"
            android:contentDescription="@string/app_name"/>
</RelativeLayout>