<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:id="@+id/login_main"
              android:background="@android:color/white"
              android:gravity="center">
    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            >
        <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView
                    android:id="@+id/login_tvUserNameTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_name"
                    android:textColor="@android:color/black"/>
            <EditText
                    android:id="@+id/login_etUserName"
                    android:layout_width="@dimen/width_edit_text"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/small_margin"
                    android:hint="@string/user_name"
                    android:singleLine="true"/>
        </LinearLayout>
        <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView
                    android:id="@+id/login_tvPassTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    android:textColor="@android:color/black"/>
            <EditText
                    android:id="@+id/login_etPass"
                    android:layout_width="@dimen/width_edit_text"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/small_margin"
                    android:hint="@string/password"
                    android:password="true"
                    android:inputType="textPassword"
                    android:singleLine="true"/>
        </LinearLayout>
        <Button
                android:id="@+id/login_btLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:background="@android:color/holo_blue_dark"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:id="@+id/textView"
                android:textColor="@color/red"
                android:layout_gravity="right|center_vertical"/>
    </LinearLayout>
</LinearLayout>